add back management

--- a/Common/src/main/res/values/strings.xml
+++ b/Common/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="error_image_description">Error imagen</string>
     <string name="no_results_available">No hay resultados disponibles</string>
     <string name="action_search">Buscar</string>
+    <string name="back_button">Atrás</string>
 </resources>
